force-app/main/default/objects/Non_ERP_Order__c/Non_ERP_Order__c.object-meta.xml
<CustomObject>
    <label>Non ERP Order</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Non ERP Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non ERP Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>