force-app/main/default/objects/Non_ERP_Order__c/fields/Amount_in_Local__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Local__c</fullName>
    <label>Amount (in Local )</label>
    <length>50</length>
    <type>Text</type>
</CustomField>