force-app/main/default/objects/Non_ERP_Order__c/fields/Customer_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country_Code__c</fullName>
    <label>Customer Country Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>