force-app/main/default/objects/Non_ERP_Order__c/fields/Enterprise_ID__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_ID__c</fullName>
    <label>Enterprise ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>