force-app/main/default/objects/Non_ERP_Order__c/fields/HW_Amount__c.field-meta.xml
<CustomField>
    <fullName>HW_Amount__c</fullName>
    <label>HW Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>