force-app/main/default/objects/Non_ERP_Order__c/fields/PS_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>PS_Credit_Amount__c</fullName>
    <label>PS Credit Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>