force-app/main/default/objects/Non_ERP_Order__c/fields/PS_Credit_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>PS_Credit_Amount_USD__c</fullName>
    <label>PS Credit Amount(in USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>