force-app/main/default/objects/Non_ERP_Order__c/fields/Salesperson_Global_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Global_ID__c</fullName>
    <label>Salesperson Global ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>