force-app/main/default/objects/Non_ERP_Order__c/fields/SW_Amount__c.field-meta.xml
<CustomField>
    <fullName>SW_Amount__c</fullName>
    <label>SW Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>