force-app/main/default/objects/Non_ERP_Order__c/fields/Total_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Amount__c</fullName>
    <label>Total Order Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>