force-app/main/default/objects/Non_ERP_Order__c/fields/Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Source__c</fullName>
    <label>Transaction Source</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>