force-app/main/default/objects/Non_ERP_Order__c/fields/TS_Amount__c.field-meta.xml
<CustomField>
    <fullName>TS_Amount__c</fullName>
    <label>TS Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>