force-app/main/default/objects/Non_ERP_Order__c/fields/UniqueExterId__c.field-meta.xml
<CustomField>
    <fullName>UniqueExterId__c</fullName>
    <externalId>true</externalId>
    <label>UniqueExterId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>