force-app/main/default/objects/Non_ERP_Order__c/validationRules/Amount_In_Locale_Should_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_In_Locale_Should_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_in_Local__c == null</errorConditionFormula>
    <errorDisplayField>Amount_in_Local_Currency__c</errorDisplayField>
    <errorMessage>Entitled Amount Can Not be Blank</errorMessage>
</ValidationRule>