force-app/main/default/objects/Non_ERP_Order__c/validationRules/Salesperson_Global_Id_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesperson_Global_Id_rule</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Salesperson_Global_ID__c ) &lt;&gt; 11 || LEN( Customer_Country_Code__c ) &lt;&gt; 2</errorConditionFormula>
    <errorMessage>Length of SALESPERSON GLOBAL ID should be 11 and CUSTOMER COUNTRY CODE should be 2.</errorMessage>
</ValidationRule>