force-app/main/default/objects/Non_ERP_Order__c/validationRules/Transaction_Source_Can_Not_Be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Transaction_Source_Can_Not_Be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>Transaction_Source__c = null</errorConditionFormula>
    <errorDisplayField>Transaction_Source__c</errorDisplayField>
    <errorMessage>TRANSACTION SOURCE cannot be blank.</errorMessage>
</ValidationRule>